# multilinear-model-tools

./: .travis.yml  README.md
blender-model-reconstruction/: ModelBuilder.py  ModelConvert.py  ModelData.py
ema-tracker/cmake/: CMakeLists.txt  ConfigureASIO.cmake
ema-tracker/src/include/: FitAction.h  FixSpeakerAction.h  LiveSequenceFitting.h  NetworkServer.h  ResetAction.h  SetSettingsAction.h  SetSourceIdsAction.h  Tracker.h  TrackerAction.h  TrackerActionExecuter.h  TrackerData.h  TrackerFitting.h  TrackerState.h  TrackerUpdate.h  YamlMesh.h  settings.h
fit-model/cmake/: CMakeLists.txt
fit-model/src/include/: settings.h
model-builder/cmake/: CMakeLists.txt
model-builder/src/include/: settings.h
shared/alignment/: KdTree.h
shared/flags/: Flag.h  FlagFixedList.h  FlagList.h  FlagNone.h  FlagSingle.h  FlagsErrorHandler.h  FlagsParser.h  Parser.h  TypeName.h
shared/landmark/: Landmark.h  LandmarkIO.h
shared/mesh/: Mesh.h  MeshIO.h  NormalEstimation.h
shared/mesh/reader/: MatReader.h  MdlReader.h  MeshReader.h  ObjReader.h  PlyReader.h  TetGenReader.h
shared/mesh/writer/: MeshWriter.h  ObjWriter.h  PlyWriter.h
shared/model/: Model.h  ModelBuilder.h  ModelConverter.h  ModelData.h  ModelDerivative.h  ModelIO.h  ModelMeshReconstructor.h  ModelReader.h  ModelReconstructor.h  ModelSpace.h  ModelTruncator.h  ModelWriter.h
shared/neighborsearch/: AdaptiveSearch.h  BasicSearch.h  FixedCorrespondences.h  NeighborSearch.h  NormalPlaneSearch.h  SearchProto.h
shared/optimization/: MinimizerSettings.h
shared/optimization/fitmodel/: DataTerm.h  Energy.h  EnergyData.h  EnergyDerivedData.h  EnergyDerivedDataUpdate.h  EnergyFunction.h  EnergyMinimizer.h  EnergyNeighbor.h  EnergySettings.h  EnergyTerm.h  ITKWrapper.h  LandmarkTerm.h  SmoothnessTerm.h
shared/tensor/: Tensor.h  TensorAccess.h  TensorAnalysis.h  TensorBuilder.h  TensorData.h  TensorModes.h  TensorOperations.h  TensorTruncator.h
shared/training/: SampleDataBase.h  SampleFileReader.h  TensorBuilder.h  TrainingData.h  TrainingDataBuilder.h
shared/utility/: BinaryConverter.h  Serializer.h
