cmake_minimum_required(VERSION 2.7)
PROJECT(fit-model)

SET(CMAKE_BUILD_TYPE release)
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -std=c++11 -march=native -Wall -Wextra -pedantic")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -std=c++11 -march=native -Wall -Wextra -pedantic")
INCLUDE(ConfigureANN.cmake)
INCLUDE(ConfigureARMADILLO.cmake)
INCLUDE(ConfigureJSONCPP.cmake)
INCLUDE(ConfigureYAMLCPP.cmake)

find_package(ITK REQUIRED)
include(${ITK_USE_FILE})

IF(ANN_FOUND AND ARMADILLO_FOUND AND JSONCPP_FOUND AND YAMLCPP_FOUND)
  SET(SRC_FILE "../src/bin/main.cpp")

  INCLUDE_DIRECTORIES("../../shared")
  INCLUDE_DIRECTORIES("../src/include")
  INCLUDE_DIRECTORIES(${ANN_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(${ARMADILLO_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(${ITK_INCLUDES})
  INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(${YAMLCPP_INCLUDE_DIR})

  ADD_EXECUTABLE(fit-model ${SRC_FILE})
  TARGET_LINK_LIBRARIES(fit-model
    ${ANN_LIBRARIES}
    ${ITK_LIBRARIES}
    ${ARMADILLO_LIBRARIES}
    ${JSONCPP_LIBRARIES}
    ${YAMLCPP_LIBRARIES}
    )

ELSE(ANN_FOUND AND ARMADILLO_FOUND AND JSONCPP_FOUND AND YAMLCPP_FOUND)
  Message("PROBLEM: One of the required libraries not found. fit-model will not be compiled.")
ENDIF(ANN_FOUND AND ARMADILLO_FOUND AND JSONCPP_FOUND AND YAMLCPP_FOUND)
